syntax = "proto3";

service AttachServerService {
  rpc Attach (AttachRequest) returns (AttachReply);
}

message AttachRequest {
  string nick = 1;
  string url = 2;
}
message AttachReply {
  int32 port = 1;
}


message User {
   string nick = 1;
}//not used yet